history - fix spacing on title

--- a/src/public/less/pages/history.less
+++ b/src/public/less/pages/history.less
@@ -17,6 +17,7 @@
 		@media (max-width: @screen-xs-max) {
 			font-size: 24px;
 			line-height: 36px;
+			margin-top: 8px;
 		}
 	}
 
@@ -62,6 +63,9 @@
 		align-items: center;
 		margin-top: 96px;
 		margin-bottom: 0;
+		@media (max-width: @screen-xs-max) {
+			margin-top: 40px;
+		}
 
 		span:nth-child(1) {
 			font-weight: 600;
